--- a/.github/workflow/release.yml
+++ b/.github/workflow/release.yml
@@ -1,10 +1,10 @@
 name: Build bottles
 
+
 on:
   push:
     tags:
-      - 'v*'
-
+      - 'v*.*.*'  # Ejecuta cuando se crea un tag que sigue el patrón semver (v1.0.0, v2.1.3, etc.)
 jobs:
   bottle:
     runs-on: ubuntu-latest
