--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,15 @@
 name: Build bottles
 
-
 on:
   push:
     tags:
-      - 'v*.*.*'  # Ejecuta cuando se crea un tag que sigue el patrón semver (v1.0.0, v2.1.3, etc.)
+      - 'v*'
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   bottle:
     runs-on: ubuntu-latest
