--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,17 +4,12 @@ on:
   push:
     tags:
       - 'v*'
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   bottle:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: Homebrew/actions/setup-homebrew@v2
+      - uses: Homebrew/actions/setup-homebrew@main
       - run: brew install gcc make
       - run: brew test-bot --ci-upload Formula/toolchain.rb
