--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Homebrew/actions/setup-homebrew@main
       - run: brew install gcc make
-      - run: brew test-bot --ci-upload Formula/toolchain.rb
+      - run: brew test-bot --tap=Formula/toolchain.rb --publish
