--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,14 +51,14 @@ jobs:
 
       # 6️⃣ Auto-aprobar la PR si pasan los tests
       - name: Auto-approve PR
-        if: success()
+        if: github.event_name == 'pull_request' && success()
         uses: hmarr/auto-approve-action@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # 7️⃣ Auto-merge si está aprobada
       - name: Auto-merge PR
-        if: success()
+        if: github.event_name == 'pull_request' && success()
         run: |
           gh pr merge --auto --merge "${{ github.event.pull_request.html_url }}"
         env:
