--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Get version from formula
         id: get_version
         run: |
-          VERSION=$(grep -m1 'url ".*v[0-9]*\.[0-9]*\.[0-9]*\.tar\.gz"' Formula/toolchain.rb | grep -o 'v[0-9]*\.[0-9]*\.[0-9]*')
+          VERSION=$(grep -m1 'url ".*v[0-9]*\.[0-9]*\.[0-9]*\.tar\.gz"' Formula/toolchain.rb | grep -o '[0-9]*\.[0-9]*\.[0-9]*')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create Release
@@ -88,8 +88,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          VERSION=${{ steps.get_version.outputs.version }}
-          gh release create $VERSION \
+          VERSION="v${{ steps.get_version.outputs.version }}"
+          gh release create "$VERSION" \
             --title "Release $VERSION" \
             --notes "Release $VERSION of the CPC Development Toolchain" \
             --draft=false \
