--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: CI
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
   push:
@@ -21,6 +21,9 @@ jobs:
       # 1️⃣ Checkout del código
       - name: Checkout repository
         uses: actions/checkout@v3
+        if: github.event_name == 'pull_request_target'
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       # 2️⃣ Setup Homebrew
       - name: Setup Homebrew
