--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   push:
-    branches:
-      - main
     tags:
       - 'v*'
 
@@ -69,7 +67,7 @@ jobs:
 
   create-release:
     needs: test-and-merge
-    if: github.event_name == 'push' && contains(github.ref, 'refs/heads/main')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       contents: write
